# KeyValue-Raft

./: .gitignore  About.md  CMakeLists.txt  Distributed-System.md  README.md  clearmake.sh  make.sh  rmtemp.sh
src/: test_rpc.cpp
src/MapReduce/: CMakeLists.txt  Mapper.cpp  Mapper.hpp  Master.cpp  Master.hpp  Reducer.cpp  Reducer.hpp  Shuffler.hpp
src/MapReduce/test/: CMakeLists.txt  Master_Mapper_comm_test_Master.cpp  map_result_0  map_result_1  map_task_0  map_task_1  test_Mapper.cpp  test_mapper  test_master  test_master.cpp  test_reducer  test_reducer.cpp
src/Raft/: CMakeLists.txt  README.md  Raft.cpp  Raft.hpp  Server.cpp  Server.hpp  SeverImpl.cpp
src/Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp  test_timer.cpp
src/TinyRPC/: CMakeLists.txt  README.md
src/TinyRPC/example/: main_client.cpp
src/kvRaft/: CMakeLists.txt  README.md  SkipList.h  SkipList.hpp  kvRaft.cpp  main.cpp
